--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -111,19 +111,22 @@
 
             $summary_plot
 
-            <br></br>
+            <br></br><br></br>
         
             <!-- Low covered exons table and plots -->
-            <h2>Exons with sub-optimal coverage</h2>
-            <br>
+            <h2>Exons with &lt;100% coverage at $threshold</h2>
             <p style="font-size:18px">
                 Of the <b>$total_genes</b> genes included in the panel, <b>$exon_issues</b> exons in 
-                <b>$gene_issues</b> genes had sub optimal-coverage.<br>
-                <br>
+                <b>$gene_issues</b> genes had sub optimal-coverage.
             </p>
-            <!-- <table id=sub class="table table-striped sortable" width="100%"> -->
-            $sub_threshold_stats
-            <!-- </table> -->
+
+            <div id="low_exons">
+                <!-- Table for sub threshold exon coverage, headings passed from script, data in JS function -->
+                <table id="low_exon_table" class="display nowrap" style="width:100%; text-align:center">
+
+                </table>
+            </div>
+            <br></br>
 
             <br></br>
 
@@ -132,7 +135,8 @@
             The top right also contains a toolbar, with functions such as panning and zooming.
 
             $low_cov_plots
-        
+            <br></br>
+
             <div id="gene">
                 <!-- Per gene table and plots -->
                 <h2> Per gene coverage summary </h2>
@@ -258,21 +262,46 @@
     </script>
 
     <!-- DataTables function for low exon coverage table -->
-    <script>
+    <script type="text/javascript" class="init">
+        function getColor(value){
+            // generates value from 0-1 for colouring threshold column by value
+            var hue=((0 + (value/100))*80).toString(10);
+            return ["hsl(",hue,", 80%, 50%)"].join("");
+        }
+
         $(document).ready(function() {
-            var table = $('#T_low_exon_table').on( 'draw.dt', function () {
-            $("#containerexample").attr("id", "container");
-            $("#loadercontainer").css("display","none");
-        } ).DataTable( {
+            var data = $sub_threshold_stats ;
+            var columnDefs = $low_exon_columns;
+            var styleCol = columnDefs
+
+            // get index of threshold column from list of columns
+            // thresholdIdx = 0;
+            var threshold = "$threshold";
+            for(var k = 0; k < columnDefs.length; k++){
+                if(columnDefs[k].title == threshold){
+                    var thresholdIdx = k;
+                }
+            }
+
+            $('#low_exon_table').DataTable( {
+                data:           data,
                 deferRender:    true,
                 scrollY:        500,
                 scrollCollapse: true,
                 scroller:       true,
                 lengthChange: false,
-                buttons: [ 'excel', 'pdf', 'colvis' ],
-                "order": [[ 3, "desc" ]]
-            } );
-        } );
+                columns: columnDefs,
+                columnDefs: [{
+                targets: thresholdIdx,
+                render: function(data, type, row, meta) {
+                    // colours threshold column by value
+                    color = getColor(data)
+                    barSize = 100 - data
+                    return '<div style="background: linear-gradient(to right,' + color + ' ' + data +'%, #FFFFFF ' + barSize + '%);">' + data + '</div>';
+                }
+                }]
+            });
+        });
     </script>
 
     <!-- DataTables function for gene coverage table -->
