change report text

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -231,9 +231,9 @@
 
             <div id="exons">
                 <!-- Table for gene level coverage, headings passed from script, data in JS function -->
-                <h2> Coverage for all regions of all genes </h2>
+                <h2> Per exon coverage </h2>
                 <br>
-                The following section provides coverage metrics for each exon of each gene.
+                The following section provides coverage metrics for every exon of each gene.
                 <br></br>
                 <table id="exon_table" class="display nowrap" style="width:100%">
                     <thead>
