--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -536,13 +536,23 @@
     <!-- DataTables function for low exon coverage table -->
     <script type="text/javascript" class="init">
         function getColor(value){
-            // generates value from 0-1 for colouring threshold column by value
-            if (value >= 95) {
-                var hue=((0 + (value/100))*80).toString(10);
-            } else {
-                var hue=((0 + (value/100))*67).toString(10);
-            } 
-            return ["hsl(",hue,",70%,50%)"].join("");
+            // map colour hex values to pct cut offs
+            var colourRanges = {
+                '#b20000': 0,
+                'FF0D0D': 30,
+                '#FF4E11': 50,
+                '#FF8E15': 65,
+                '#FAB733': 85,
+                '#80cd32': 95,
+            }
+
+            // loop over colour ranges and assign appropriate code
+            for (var key in colourRanges) {
+                if (value >= colourRanges[key]) {
+                    var hex_colour = key;
+                }
+            }
+            return hex_colour;
         }
 
         $(document).ready(function() {
