--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -326,16 +326,20 @@
 
                 </br></br>
             </div>
+
+            <!-- Optional section displaying coverage per chromosome, if required -->
+            <div id="coverage_per_chromosome">
+                <h2>Coverage per chromosome</h2> 
+                <br>
+                The following section provides an overview of global read coverage per chromosome.
+                </br>
+
+                $coverage_per_chromosome_fig
+
+            </div>
+
         </div>
 
-        <!-- Optional section displaying coverage per chromosome, if required -->
-        <div id="coverage_per_chromosome">
-            <h2>Coverage per chromosome</h2> 
-
-            $coverage_per_chromosome_fig
-
-            <!--    <br></br><hr><br></br> -->
-        </div>
 
         <div class="card-footer bg-info p-1 text-white" style="display: flex; justify-content: space-between; align-items: baseline">
             <span>
