text spacing increased in coverage-per-chromosome section

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -330,11 +330,16 @@
 
             <!-- Optional section displaying coverage per chromosome, if required -->
             <div id="coverage_per_chromosome">
-                <h2>Coverage per chromosome</h2> 
+                <h2>Coverage per chromosome</h2>
+
+                <br></br>
+
                 The following section provides an overview of global read coverage per chromosome.
 
                 Please note that if the source data is derived from a target-capture assay, coverage
-                data will be plotted within target regions _only_.
+                data will be plotted within target regions only.
+
+                <br></br>
 
                 $coverage_per_chromosome_fig
 
